# YoungBuck

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  turbo.json
.github/workflows/: ci.yml  lockfile.yml
apps/api/: .env.example  .eslintrc.js  package.json
apps/api/src/: app.ts  index.ts
apps/api/src/__tests__/: api.test.ts
apps/api/src/config/: db.ts  jwt.ts
apps/api/src/controllers/: auth.controller.ts  stats.controller.ts  stellar.controller.ts  transaction.controller.ts  user.controller.ts
apps/api/src/middleware/: auth.middleware.ts  error.middleware.ts
apps/api/src/routes/: auth.routes.ts  stats.routes.ts  stellar.routes.ts  transaction.routes.ts  user.routes.ts
apps/api/src/services/: auth.service.ts  stats.service.ts  stellar.service.ts  transaction.service.ts
apps/web/: .env.example  .eslintrc.json  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: dashboard.module.css  page.tsx
apps/web/components/: Navbar.module.css  Navbar.tsx  StatCard.module.css  StatCard.tsx  TransactionTable.module.css  TransactionTable.tsx
apps/web/lib/: auth.ts  stellar.ts
contracts/: package.json
contracts/soroban/: Cargo.toml  build_error.txt  error.txt
contracts/soroban/src/: lib.rs  test.rs
contracts/soroban/test_snapshots/test/: test_deposit_records_entry_and_deducts_fee.1.json  test_get_entries_pagination.1.json  test_init_sets_fee_and_count.1.json  test_set_fee_bps_updates_fee.1.json  test_settle_marks_entry.1.json
scripts/deployment/: deploy-local.sh
(+4 files in other folders)
