[package]
name = "youngbuck-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.5.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
arbitrary = { version = "=1.3.2", features = ["derive"] }
derive_arbitrary = "=1.3.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
